@startuml
package "ca.mcmaster.se2aa4.mazerunner" {
    enum Direction {
        UP
        DOWN
        LEFT
        RIGHT
        
    }

    
    class Node {
        
    }

    class Position {
        x: int
        y: int
        
    }

    class Path {
        -pathSteps: List<Character>
        +Path(path: String)
        +getPathSteps(): List<Character>
        +getCanonicalForm(): String
        +getFactorizedForm(): String
    }
    class MazeBFSSolver{

    } 
    class Main{

    }
    interface MazeSolver{
        +solve()
    }
    class RightHandSolver{

    }
    class TremauxSolver{

    }
    package "ca.mcmaster.se2aa4.mazerunner.Factory" {
        interface MazeExplorer {
            +runs(): Maze
        }

        class Benchmarking {
        
        }   

        class PathCalculator {
        
        }
        class PathValidation{

        }
        class Maze {
        
        -start: Position
        -end: Position
        
        }

    }
}



Benchmarking ..|> MazeExplorer
PathCalculator ..|> MazeExplorer
PathValidation ..|> MazeExplorer

Benchmarking --> MazeSolver

MazeBFSSolver ..|> MazeSolver
RightHandSolver ..|> MazeSolver
TremauxSolver ..|> MazeSolver

MazeExplorer *--> Maze

Main o--> Maze
Main o--> MazeExplorer

MazeBFSSolver o--> Maze
MazeBFSSolver --> Node
MazeBFSSolver --> Path
MazeBFSSolver --> Node
MazeBFSSolver --> Direction
MazeBFSSolver --> Position

Node o--> Direction
Node o--> Position

Position *--> Direction

RightHandSolver *--> Path
RightHandSolver o--> Direction
RightHandSolver o--> Position

TremauxSolver o--> Direction
TremauxSolver o--> Position




 
@enduml